Bug 15374 - aes256 smb3 encryption algorithms are not allowed in smb3_sid_parse()
Summary: aes256 smb3 encryption algorithms are not allowed in smb3_sid_parse()
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.18.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-16 11:24 UTC by Stefan Metzmacher
Modified: 2023-05-31 16:10 UTC (History)
1 user (show)

See Also:


Attachments
Patch for v4-18-test (1.22 KB, patch)
2023-05-17 07:49 UTC, Stefan Metzmacher
vl: review+
Details
Patch for v4-17-test (1.22 KB, patch)
2023-05-17 07:49 UTC, Stefan Metzmacher
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2023-05-16 11:24:33 UTC
We should not limit the possible encryption algorithms to the currently
known once.
Comment 1 Samba QA Contact 2023-05-17 07:35:05 UTC
This bug was referenced in samba master:

e03e738dfc96b3c8ce54e2d280143965713f4778
Comment 2 Stefan Metzmacher 2023-05-17 07:49:22 UTC
Created attachment 17888 [details]
Patch for v4-18-test
Comment 3 Stefan Metzmacher 2023-05-17 07:49:52 UTC
Created attachment 17889 [details]
Patch for v4-17-test
Comment 4 Jule Anger 2023-05-23 07:06:50 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 5 Samba QA Contact 2023-05-23 08:10:12 UTC
This bug was referenced in samba v4-17-test:

98b8ffdb44788ea740b829dd800f459107d14c22
Comment 6 Samba QA Contact 2023-05-26 13:30:20 UTC
This bug was referenced in samba v4-18-test:

cae050cf785575b3d66ad2093ac48d7f1e9652e8
Comment 7 Jule Anger 2023-05-26 14:39:06 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2023-05-31 16:10:45 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.3):

cae050cf785575b3d66ad2093ac48d7f1e9652e8